--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -174,4 +174,10 @@
   padding: 2em 0;
 }
 
+#gallery-frame {
+  height: 610px;
+  overflow: hidden;
+  position: relative;
+}
+
 /*# sourceMappingURL=homePg.css.map */
