--- a/websites/BPN/www/site/templates/styles/home-gallery-grid.css
+++ b/websites/BPN/www/site/templates/styles/home-gallery-grid.css
@@ -3,8 +3,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	-webkit-transform-origin: 50% 100%;
-	transform-origin: 50% 100%;
+	-webkit-transform-origin: -20% 100%;
+  transform-origin: -20% 100%;
 }
 
 .js .grid,
@@ -53,7 +53,7 @@
 }
 
 .home-gallery-grid {
-	width: 1200px;
+	width: 100vw;
 	height: 100%;
 }
 
