--- a/websites/BPN/www/site/compiled-dev/css/home-gallery-grid.css
+++ b/websites/BPN/www/site/compiled-dev/css/home-gallery-grid.css
@@ -2,8 +2,8 @@
   position: absolute;
   top: 0;
   left: 0;
-  -webkit-transform-origin: 50% 100%;
-  transform-origin: 50% 100%;
+  -webkit-transform-origin: -20% 100%;
+  transform-origin: -20% 100%;
 }
 
 .js .grid,
@@ -52,8 +52,8 @@
 }
 
 .home-gallery-grid {
-  width: auto;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .home-gallery-grid .grid__item {
