--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -178,6 +178,15 @@
   height: 610px;
   overflow: hidden;
   position: relative;
+  background: linear-gradient(20deg, #ffffff, #b5c6c5);
+}
+#gallery-frame .photo-gallery-title {
+  font-size: 4em;
+  display: block;
+  position: relative;
+  float: right;
+  margin-right: 5%;
+  top: 5%;
 }
 
 /*# sourceMappingURL=homePg.css.map */
