--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -101,13 +101,8 @@ h3{
   box-shadow: 0px -6px 30px #4a4a4a;
 }
 
-#experience-frame{
-  background-image: url('site/assets/images/lake-merrit.jpg');
-  background-size: cover;
-}
-
 #events-frame{
-  background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/eventsBg.jpg');
+  background-image: url('../../assets/images/eventsBg.jpg');
   background-attachment: fixed;
   padding: 6em 0 6em 0;
   @include clearfix();
@@ -135,7 +130,7 @@ h3{
         background-color: $bpnTan;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/art-and-culture-nights.jpg');
+        background-image: url('../../assets/images/events/art-and-culture-nights.jpg');
       }
     }
     &--category2{
@@ -143,7 +138,7 @@ h3{
         background-color: $bpnGreen;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/dinner-and-cocktail-parties.jpg');
+        background-image: url('../../assets/images/events/dinner-and-cocktail-parties.jpg');
       }
     }
     &--category3{
@@ -151,7 +146,7 @@ h3{
         background-color: $bpnOrange;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/discussion-and-speaker-events.jpg');
+        background-image: url('../../assets/images/events/discussion-and-speaker-events.jpg');
       }
     }
     &--category4{
@@ -159,7 +154,7 @@ h3{
         background-color: $bpnGray;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/film-screening.jpg');
+        background-image: url('../../assets/images/events/film-screening.jpg');
       }
     }
     &--category5{
@@ -167,7 +162,7 @@ h3{
         background-color: $bpnYellow;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/health.jpg');
+        background-image: url('../../assets/images/events/health.jpg');
       }
     }
     &--category6{
@@ -175,7 +170,7 @@ h3{
         background-color: $bpnPurple;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/travel.jpg');
+        background-image: url('../../assets/images/events/travel.jpg');
       }
     }
     &--category7{
@@ -183,7 +178,7 @@ h3{
         background-color: $bpnDarkBrown;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/theatre-and-musical-performance.jpg');
+        background-image: url('../../assets/images/events/theatre-and-musical-performance.jpg');
       }
     }
     &--category8{
@@ -191,7 +186,7 @@ h3{
         background-color: $bpnLightBlue;
       }
       .image-container{
-        background-image: url('/lab/Pylon-Innovation/websites/BPN/www/site/assets/images/events/outdoor.jpg');
+        background-image: url('../../assets/images/events/outdoor.jpg');
       }
     }
   } //hp-events-teaser
