styled the contact form

--- a/websites/BPN/www/site/compiled-dev/css/base.css
+++ b/websites/BPN/www/site/compiled-dev/css/base.css
@@ -454,6 +454,10 @@ button#showMenu {
     margin-bottom: 20px;
   }
 }
+* {
+  -webkit-tap-highlight-color: transparent;
+}
+
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
   display: block;
 }
@@ -579,6 +583,7 @@ button, input, select, textarea {
   font-family: inherit;
   font-size: 100%;
   margin: 0;
+  outline: 0;
 }
 
 button, input {
