--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -102,6 +102,7 @@ h3 {
 #events-frame {
   background-image: url("../../assets/images/eventsBg.jpg");
   background-attachment: fixed;
+  background-size: cover;
   padding: 6em 0 6em 0;
   overflow: auto;
   zoom: 1;
@@ -217,6 +218,7 @@ h3 {
 }
 #contact-frame .copy-container {
   margin-top: -70px;
+  padding-bottom: 3em;
   background-color: white;
   z-index: 2;
   position: relative;
@@ -232,6 +234,28 @@ h3 {
   color: white;
   text-shadow: 1px 0px 4px #a9a9a9;
   text-transform: uppercase;
+}
+
+.contact-form ul {
+  margin: 0 auto;
+  padding: 0;
+  width: 50%;
+}
+.contact-form ul li {
+  list-style-type: none;
+  margin: 0.5em 0;
+}
+.contact-form ul li input,
+.contact-form ul li textarea {
+  padding: 0.5em;
+  width: 100%;
+  border: 1px solid #efefef;
+  transition: 0.3s;
+}
+.contact-form ul li input:focus,
+.contact-form ul li textarea:focus {
+  border-bottom: 2px solid #097ABB;
+  color: #097ABB;
 }
 
 /*# sourceMappingURL=homePg.css.map */
