--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -6,6 +6,11 @@
   box-shadow: 0px 0px 20px -9px;
   background-color: white;
   cursor: pointer;
+  transition: 0.3s;
+  &:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 10px $bpnPaleGray;
+  }
   .image-container{
     position: relative;
     width: 100%;
@@ -30,6 +35,14 @@
     h2{
       margin-bottom: 0;
     }
+  }
+  i{
+    margin-right: 0.4em;
+    color: $bpnParagraph;
+  }
+  .event-price{
+    display: inline-block;
+    float: right;
   }
 }
 
