--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -9,7 +9,7 @@
   transition: 0.3s;
   &:hover{
     transform: scale(1.05);
-    box-shadow: 0px 0px 10px $bpnPaleGray;
+    box-shadow: 0px 0px 10px $bpnLightGray;
   }
   .image-container{
     position: relative;
