--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -5,6 +5,7 @@
   $bpnBlue: #097ABB;
   $bpnDarkBlue: #383C3E;
   $bpnPaleGray: #efefef;
+  $bpnLightGray: #d6d6d6;
   $bpnParagraph: #333;
   // events colors
   $bpnTan: #b8a386;
