--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -258,5 +258,8 @@ h3 {
   border-bottom: 2px solid #097ABB;
   color: #097ABB;
 }
+.contact-form .InputfieldHidden {
+  display: none;
+}
 
 /*# sourceMappingURL=homePg.css.map */
