--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -7,6 +7,7 @@
   $bpnPaleGray: #efefef;
   $bpnLightGray: #d6d6d6;
   $bpnParagraph: #333;
+  $bpnGrayBlue: #d0d7dc;
   // events colors
   $bpnTan: #b8a386;
   $bpnGreen: #79c189;
