--- a/websites/BPN/www/site/templates/styles/sass/partials/_contact.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_contact.scss
@@ -8,11 +8,13 @@
       margin: 0.5em 0;
       input,
       textarea{
-        padding: 0.5em;
-        width: 100%;
+        padding: 0.5em 3%;
+        width: 94%;
         border: 1px solid $bpnPaleGray;
+        border-bottom: 2px solid $bpnPaleGray;
         background-color: $bpnPaleGray;
         transition: 0.3s;
+        resize: none;
         &:focus{
           border-bottom: 2px solid $bpnBlue;
           color: $bpnBlue;
@@ -22,5 +24,13 @@
   }
   .InputfieldHidden{
     display: none;
+  }
+  button{
+    padding: 0.6em 6%;
+    width: 100%;
+    font-size: 1.1em;
+    background-color: $bpnGrayBlue;
+    border: 0;
+    color: $bpnParagraph;
   }
 }
