--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -246,7 +246,7 @@ h3{
       display: block;
       position: relative;
       top: 0;
-      background-color: rgb(208, 215, 220);
+      background-color: $bpnGrayBlue;
       padding: 0.5em 2em;
       font-size: 4em;
       color: white;
