--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -1,15 +1,29 @@
 .teaser{
   width: 30%;
   height: 510px;
+  position: relative;
   float: left;
   margin: 20px 1.66%;
   box-shadow: 0px 0px 20px -9px;
   background-color: white;
   cursor: pointer;
   transition: 0.3s;
+  &:after{
+    content: " ";
+    position: absolute;
+    height: 3px;
+    z-index: 2;
+    bottom: 0;
+    background-color: $bpnBlue;
+    width: 0%;
+    transition: 0.3s;
+  }
   &:hover{
-    transform: scale(1.05);
+    transform: scale(1.02) !important;
     box-shadow: 0px 0px 10px $bpnLightGray;
+    &:after{
+      width:100%;
+    }
   }
   .image-container{
     position: relative;
@@ -72,6 +86,11 @@
     background-color: white;
     z-index: 10;
     cursor: pointer;
+    &:before{
+      transform: translate(-50%, 50%);
+      position: absolute;
+      left: 50%;
+    }
   }
   .article-copy{
     width: 45%;
