--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -61,7 +61,14 @@
   }
   .event-price{
     display: inline-block;
+    position: absolute;
+    font-weight: bold;
+    font-size: 1.4em;
     float: right;
+    color: $bpnBlue;
+    bottom: 0.5em;
+    right: 1em;
+    margin: 0;
   }
 }
 
