events teaser and details styling

--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -34,8 +34,6 @@ body.load-out:before {
 .bounding-container {
   max-width: 1300px;
   margin: 0 auto;
-  overflow: auto;
-  zoom: 1;
 }
 
 .copy-container {
@@ -168,10 +166,10 @@ Animation
 }
 .teaser figcaption {
   padding: 1em;
-  color: #097ABB;
 }
 .teaser figcaption h2 {
   margin-bottom: 0;
+  color: #097ABB;
 }
 .teaser figcaption p {
   margin-top: 0em;
@@ -211,6 +209,15 @@ Animation
   width: 50%;
   float: left;
 }
+.article-details .post-logistics p {
+  margin: 1em 0 0.2em 0;
+  font-weight: bold;
+  color: #097ABB;
+}
+.article-details .post-logistics i {
+  margin-right: 0.4em;
+  color: #097ABB;
+}
 .article-details .close-content-btn {
   position: fixed;
   top: 30px;
@@ -220,6 +227,24 @@ Animation
   background-color: white;
   z-index: 10;
   cursor: pointer;
+  border-radius: 50%;
+  border: 3px solid #333;
+}
+.article-details .close-content-btn:hover:after {
+  opacity: 1;
+  right: 2.1em;
+}
+.article-details .close-content-btn:after {
+  content: "Close";
+  position: absolute;
+  right: 0;
+  top: 0.4em;
+  font-weight: bold;
+  opacity: 0;
+  border-radius: 3px;
+  transition: 0.3s;
+  padding: 0 0.5em;
+  background-color: rgba(255, 255, 255, 0.49);
 }
 .article-details .close-content-btn:before {
   transform: translate(-50%, 50%);
@@ -238,6 +263,7 @@ Animation
 }
 .article-details .image-copy-container {
   margin-bottom: 1em;
+  overflow: auto;
 }
 .article-details .photo-gallery-teaser {
   width: 160px;
