--- a/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_layout.scss
@@ -42,7 +42,7 @@ body.load-out:before{
 .bounding-container{
   max-width: $bounding-container;
   margin: 0 auto;
-  @include clearfix();
+  // @include clearfix();
 }
 
 .copy-container{
