building the photo gallery

--- a/websites/BPN/www/site/templates/styles/sass/events.scss
+++ b/websites/BPN/www/site/templates/styles/sass/events.scss
@@ -3,3 +3,4 @@
 @import "partials/filterNav.scss";
 @import "partials/eventsTeasers.scss";
 @import "partials/map.scss";
+@import "partials/photoGallery.scss";
