--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -165,7 +165,7 @@
       font-weight: bold;
     }
     .post-date{
-
+      margin-bottom: 1.5em;
     }
     .post-address{
 
@@ -202,5 +202,4 @@ figure.open-up {
   figcaption{
     opacity: 0;
   }
-
 }
