--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -281,6 +281,9 @@ Animation
   margin-bottom: 0.5em;
   font-weight: bold;
 }
+.article-details .post-logistics .post-date {
+  margin-bottom: 1.5em;
+}
 .article-details .social-share {
   margin-top: 2em;
   width: 100%;
@@ -317,6 +320,56 @@ figure.open-up figcaption {
   clear: both;
   height: 400px;
   width: 100%;
+}
+
+.photo-gallery-container {
+  position: fixed;
+  width: calc(100%);
+  height: calc(100% - 3em);
+  padding: 2em 0em 0em 0em;
+  background-color: #000000;
+  top: 0;
+  left: 0;
+  z-index: 20;
+}
+.photo-gallery-container .thumbnails-group {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+}
+.photo-gallery-container .thumbnails-group .thumbnail {
+  background-color: gray;
+  height: 9em;
+  width: 10.1%;
+  top: 0%;
+  display: inline-block;
+  float: left;
+  margin: 0.5%;
+  transition: 0.5s;
+  position: relative;
+  cursor: pointer;
+}
+.photo-gallery-container .thumbnails-group .fade-out {
+  opacity: 0;
+  top: -10%;
+  visibility: hidden;
+  transition: 0.3s;
+}
+.photo-gallery-container .thumbnails-group .go-to-center {
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  opacity: 1;
+  position: absolute;
+  visibility: visible;
+}
+.photo-gallery-container .thumbnails-group .remove-front {
+  opacity: 0;
+  transition: 0.1s;
+}
+.photo-gallery-container .thumbnails-group .grid-icon {
+  color: white;
 }
 
 /*# sourceMappingURL=events.css.map */
