--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -333,13 +333,12 @@ figure.open-up figcaption {
   z-index: 20;
 }
 .photo-gallery-container .thumbnails-group {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
-  background-color: white;
+  z-index: 2;
 }
 .photo-gallery-container .thumbnails-group .thumbnail {
-  background-color: gray;
   height: 9em;
   width: 10.1%;
   top: 0%;
@@ -349,6 +348,10 @@ figure.open-up figcaption {
   transition: 0.5s;
   position: relative;
   cursor: pointer;
+  overflow: hidden;
+}
+.photo-gallery-container .thumbnails-group .thumbnail img {
+  height: 100%;
 }
 .photo-gallery-container .thumbnails-group .fade-out {
   opacity: 0;
@@ -366,10 +369,26 @@ figure.open-up figcaption {
 }
 .photo-gallery-container .thumbnails-group .remove-front {
   opacity: 0;
-  transition: 0.1s;
+  transition: 0s;
 }
-.photo-gallery-container .thumbnails-group .grid-icon {
+.photo-gallery-container .grid-icon {
   color: white;
+}
+.photo-gallery-container .main-image {
+  width: 100%;
+  height: 100%;
+  background-color: tan;
+  position: relative;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 1s;
+  z-index: 2;
+  visibility: hidden;
+}
+.photo-gallery-container .fade-in {
+  opacity: 1;
+  visibility: visible;
 }
 
 /*# sourceMappingURL=events.css.map */
