--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -8,12 +8,11 @@
   left: 0;
   z-index: 20;
   .thumbnails-group{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
-    background-color: white;
+    z-index: 2;
     .thumbnail{
-      background-color: gray;
       height: 9em;
       width: 10.1%;
       top: 0%;
@@ -23,6 +22,10 @@
       transition: 0.5s;
       position: relative;
       cursor: pointer;
+      overflow: hidden; 
+      img{
+        height: 100%;
+      }
     }
     .fade-out{
       opacity: 0;
@@ -40,10 +43,26 @@
     }
     .remove-front{
       opacity: 0;
-      transition: 0.1s;
+      transition: 0s;
     }
-    .grid-icon{
-      color: white;
-    }
+  } // /thumbnail-group
+  .grid-icon{
+    color: white;
+  }
+  .main-image{
+    width: 100%;
+    height: 100%;
+    background-color: tan;
+    position: relative;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: 1s;
+    z-index: 2;
+    visibility: hidden;
+  }
+  .fade-in{
+    opacity: 1;
+    visibility: visible;
   }
 }
