--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -6,6 +6,8 @@
   background-color: #000000;
   top: 0;
   left: 0;
+  opacity: 0;
+  visibility: hidden;
   z-index: 20;
   .thumbnails-group{
     position: absolute;
@@ -52,7 +54,7 @@
   .main-image{
     width: 100%;
     height: 100%;
-    background-color: tan;
+    background-color: black;
     position: relative;
     top: 0;
     left: 0;
@@ -60,6 +62,7 @@
     transition: 1s;
     z-index: 2;
     visibility: hidden;
+    text-align: center;
   }
   .fade-in{
     opacity: 1;
