--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -394,6 +394,27 @@ figure.open-up figcaption {
   max-height: 100%;
   max-width: 100%;
 }
+.photo-gallery-container .click-fields {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  cursor: pointer;
+}
+.photo-gallery-container .click-fields .left-field {
+  position: absolute;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: yellow;
+}
+.photo-gallery-container .click-fields .right-field {
+  position: absolute;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: purple;
+}
 .photo-gallery-container .fade-in {
   opacity: 1;
   visibility: visible;
