--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -69,6 +69,27 @@
       max-width: 100%;
     }
   }
+  .click-fields{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 3;
+    cursor: pointer;
+    .left-field{
+      position: absolute;
+      left: 0;
+      width: 50%;
+      height: 100%;
+      background-color: yellow;
+    }
+    .right-field{
+      position: absolute;
+      right: 0;
+      width: 50%;
+      height: 100%;
+      background-color: purple;
+    }
+  }
   .fade-in{
     opacity: 1;
     visibility: visible;
