--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -75,12 +75,14 @@
     height: 100%;
     z-index: 3;
     cursor: pointer;
+    visibility: hidden;
     .left-field{
       position: absolute;
       left: 0;
       width: 50%;
       height: 100%;
       background-color: yellow;
+      opacity: 0.5;
     }
     .right-field{
       position: absolute;
@@ -88,6 +90,7 @@
       width: 50%;
       height: 100%;
       background-color: purple;
+      opacity: 0.5;
     }
   }
   .fade-in{
