--- a/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_variables.scss
@@ -8,6 +8,7 @@
   $bpnLightGray: #d6d6d6;
   $bpnParagraph: #333;
   $bpnGrayBlue: #d0d7dc;
+  $eventsElementShadow: #c3c3c3;
   // events colors
   $bpnTan: #b8a386;
   $bpnGreen: #79c189;
