--- a/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_eventsTeasers.scss
@@ -146,8 +146,9 @@
     }
   }
   .image-copy-container{
-    margin-bottom: 1em;
+    margin: 1em 0;
     overflow: auto;
+    box-shadow: 0px 0px 10px $eventsElementShadow;
   }
   .photo-gallery-teaser{
     width: 160px;
