--- a/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_photoGallery.scss
@@ -29,6 +29,12 @@
       img{
         height: 100%;
       }
+      &:hover{
+        transform: scale(1.1);
+        img{        
+          @include filter(brightness(1.2));
+        }
+      }
     }
     .fade-out{
       opacity: 0;
