--- a/websites/BPN/www/site/compiled-dev/css/events.css
+++ b/websites/BPN/www/site/compiled-dev/css/events.css
@@ -369,17 +369,26 @@ figure.open-up figcaption {
   box-shadow: 0px 0px 10px #c3c3c3;
 }
 
+.photo-gallery-perspective {
+  perspective: 1000px;
+  position: fixed;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  visibility: hidden;
+  z-index: 20;
+}
+
 .photo-gallery-container {
   position: fixed;
   width: calc(100%);
   height: calc(100% - 2em);
   padding: 2em 0em 0em 0em;
-  background-color: #000000;
-  top: 0;
+  background-color: black;
+  top: 30%;
   left: 0;
   opacity: 0;
-  visibility: hidden;
-  z-index: 20;
+  transform: rotateX(-40deg);
   transition: 0.5s;
 }
 .photo-gallery-container .thumbnails-group {
@@ -431,7 +440,9 @@ figure.open-up figcaption {
   transition: 0s;
 }
 .photo-gallery-container .grid-icon {
+  position: relative;
   color: white;
+  z-index: 21;
 }
 .photo-gallery-container .main-image {
   width: 100%;
@@ -478,6 +489,8 @@ figure.open-up figcaption {
 .fade-in {
   opacity: 1;
   visibility: visible;
+  top: 0;
+  transform: rotateX(0deg);
 }
 
 .photo-gallery-close-btn {
@@ -489,6 +502,7 @@ figure.open-up figcaption {
   padding: 0.5em 1em;
   background-color: #252525;
   cursor: pointer;
+  z-index: 21;
 }
 
 /*# sourceMappingURL=events.css.map */
