hooked in Gmaps and set a marker within it

--- a/websites/BPN/www/site/compiled-dev/css/homePg.css
+++ b/websites/BPN/www/site/compiled-dev/css/homePg.css
@@ -1,3 +1,8 @@
+.bounding-container {
+  overflow: auto;
+  zoom: 1;
+}
+
 .register {
   padding: 1em;
   display: table;
@@ -27,7 +32,7 @@
 
 .btn-cta {
   position: relative;
-  margin: 2em auto 0 auto;
+  margin: 3em auto 0 auto;
   text-transform: uppercase;
   display: table;
   padding: 0.6em 2em;
