--- a/websites/BPN/www/site/compiled-dev/css/intro.css
+++ b/websites/BPN/www/site/compiled-dev/css/intro.css
@@ -51,6 +51,11 @@
   position: relative;
 }
 
+#nav-menu {
+  opacity: 0;
+  visibility: hidden;
+}
+
 .bar, .orbit {
   position: absolute;
   margin: 0 auto;
