--- a/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
+++ b/websites/BPN/www/site/templates/styles/sass/partials/_homePg.scss
@@ -10,6 +10,7 @@
   cursor: pointer;
   color: $bpnBlue;
   text-shadow: none;
+  text-decoration: none;
   &:after{
     content: " ";
     width: 100%;
@@ -26,6 +27,10 @@
     transform: translateY(-50%);
     transition: 0.5s;
   }
+}
+
+a{
+  text-decoration: none;
 }
 
 .btn-cta{
@@ -102,6 +107,16 @@ h3{
   position: relative;
   margin-top: -10px;
   box-shadow: 0px -6px 30px #4a4a4a;
+  h2{
+    text-transform: uppercase;
+    font-size: 2.2em;
+  }
+  h3{
+    font-size: 1.3em;
+  }
+  p{
+    line-height: 1.5;
+  }
 }
 
 #events-frame{
